# gpx-analysis

./: .gitignore  DRAFT_coast_speed_openstax_explained.qmd  README.md  build_quarto_data.py  download_bay_area_osm.py  main.ipynb  main.py  pyproject.toml  route_tags.yml  routes.yml  sandbox.ipynb  sandbox.py
data/: bart_stations.kml
docs/: about.html  index.html  routes-dashboard.html  search.json  styles.css
gpx_analysis/: __init__.py  analytics.py  chunks.py  geo.py  hazards.py  io.py  physics.py  reporting.py  viz.py
gpx_data/: (unnamed).gpx  Arli-Spruce_to_Wildcat_Creek.gpx  Arli-griz_to_Vollmer_Peak.gpx  Arlington_to_Southpark_with_Gravel.gpx  Lake_Merritt_to_Moraga.gpx  OAK_Hills_Skyline_Loop.gpx  Oak_Hills_Loop_w__Pinehurst.gpx  Point_San_Pedro_Loop.gpx  Skyline_Ridge_to_Chabot.gpx  Three_Wild_Bears.gpx  Trestle Glen to BBR Loop.gpx  Tunnel to Claremont Loop.gpx  Whole_Ridge.gpx  Whole_Ridge_and_Back.gpx  Wildwood_to_bbr_loop.gpx  alvarado_gravel_wildcat_conlon_nimitz_meadow.gpx  alvarado_gravel_wildcat_havey_nimitz_meadow.gpx  arlington_gravel_loop.gpx  arlington_loop.gpx  claremont.gpx  classic_grizzly.gpx  mandela.gpx  onthegomap-32.3-mi-route.gpx  redwood_big_gravel_ride.gpx  redwood_to_macarthur.gpx  richmond_to_marin.gpx  shepards.gpx  spruce_arlington.gpx  spruce_up_euclid_down.gpx  stoneface.gpx  stoneface_2.gpx  three_bears_with_gravel.gpx  tunnel_to_pinehurst.gpx  tunnel_to_pinehurst_joaquin_miller.gpx  tunnel_to_pinehurst_skyline_to_shepards.gpx  tunnel_up_claremont_down.gpx  union_city_gravel.gpx  washington.gpx  wildwood.gpx  yerba_buena.gpx
(+501 files in other folders)
