[project]
name = "gpx-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "gpxpy>=1.6.2",
    "ipykernel>=7.1.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "shapely>=2.1.2",
]
